<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.hneu.languagetrainer.masterdetailflow.VocabularyActivityFragment" >

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/infoMaxHeight"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:scrollbars="vertical"
        android:text="@string/counter_words_info"
        android:textIsSelectable="true"
        android:textSize="@dimen/mediumText" />

    <ListView
        android:id="@+id/sectionsListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible" >
    </ListView>

    <Button
        android:id="@+id/practiceCounters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClickPracticeCounterWords"
        android:text="@string/practice_words" />
      <Button
        android:id="@+id/allCounters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClickPracticeCounterWords"
        android:text="@string/all_counters" />

</LinearLayout>