<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VocabularyActivity" >

    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textSize="@dimen/xlargeText" android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greetingTextView"
        android:text="@string/info"
        android:textSize="@dimen/mediumText" />

    <Button
        android:id="@+id/buttonTakeTest"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="buttonTakeTestOnClick"
        android:text="@string/take_test"
        android:textSize="@dimen/buttonTextSize" />

    <TextView
        android:id="@+id/levelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/or"
        android:textAlignment="textEnd"
        android:textSize="@dimen/buttonTextSize" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_gravity="center"
        android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/radioButtonN5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="radioButtonN5OnClick"
        android:text="N5"
        android:textSize="@dimen/mediumText" />

    <RadioButton
        android:id="@+id/radioButtonN4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="radioButtonN4OnClick"
        android:text="N4"
        android:textSize="@dimen/mediumText" />

    <RadioButton
        android:id="@+id/radioButtonN3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="radioButtonN3OnClick"
        android:text="N3"
        android:textSize="@dimen/mediumText" />

    <RadioButton
        android:id="@+id/radioButtonN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="radioButtonN2OnClick"
        android:text="N2"
        android:textSize="@dimen/mediumText" />

    <RadioButton
        android:id="@+id/radioButtonN1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="radioButtonN1OnClick"
        android:text="N1"
        android:textSize="@dimen/mediumText" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonStart"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_gravity="center"
        android:layout_toLeftOf="@+id/radioGroup1"
        android:onClick="buttonStartOnClick"
        android:text="@string/start_learning"
        android:textSize="@dimen/buttonTextSize" />

</LinearLayout>