<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestResultActivity" >

    <TextView
        android:id="@+id/testResultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_results"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/vocTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/voc_gr"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/vocResultsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/vocIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/correct" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/readingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/reading"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/readingResultsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/readingIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/correct" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/listeningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/listening"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/listeningResultsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/listeningIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/correct" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/total"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/totalResultsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/totalIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/correct" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonReturnOnClick"
        android:text="@string/to_main_menu" />

</LinearLayout>