<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.hneu.languagetrainer.masterdetailflow.GioingoActivityFragment" >

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/infoMaxHeight"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:scrollbars="vertical"
        android:text="@string/counter_words_info"
        android:textIsSelectable="true"
        android:textSize="@dimen/mediumText" />

    <TextView
        android:id="@+id/giongoInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="Learned 15 words from 48"
        android:textIsSelectable="true"
        android:textSize="@dimen/buttonTextSize" />

    <ProgressBar
        android:id="@+id/giongoProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/practiceGiongo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClickPracticeGiongo"
        android:text="@string/practice_words" />

    <Button
        android:id="@+id/allGiongo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_gravity="center"
        android:onClick="onClickAllGiongo"
        android:text="@string/all_giongo" />

</LinearLayout>