<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".MatchWordsActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="wrap_content" >

            <ListView
                android:id="@+id/kanjiListView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:visibility="visible" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content" >

            <ListView
                android:id="@+id/readingListView"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:visibility="visible" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <ListView
                android:id="@+id/translationListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" >
            </ListView>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/isCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonOk"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonOkOnClick"
            android:text="@string/ok" />

        <Button
            android:id="@+id/buttonSkip"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonSkipMatchOnClick"
            android:text="@string/skip" />

        <Button
            android:id="@+id/buttonIAlrKnow"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="buttonIAlrKnow"
            android:text="@string/i_already_know" />
    </LinearLayout>

</LinearLayout>