<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LevelDefTestResultActivity" >

    <TextView
        android:id="@+id/descTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_desc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/recommendationsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/percentageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/infoTextView"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/levelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioGroup1"
            android:text="@string/level"
            android:textAlignment="textEnd"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/levelTextView" >

            <RadioButton
                android:id="@+id/radioButtonN5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="radioButtonN5OnClick"
                android:text="N5" />

            <RadioButton
                android:id="@+id/radioButtonN4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="radioButtonN4OnClick"
                android:text="N4" />

            <RadioButton
                android:id="@+id/radioButtonN3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="radioButtonN3OnClick"
                android:text="N3" />

            <RadioButton
                android:id="@+id/radioButtonN2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="radioButtonN2OnClick"
                android:text="N2" />

            <RadioButton
                android:id="@+id/radioButtonN1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="radioButtonN1OnClick"
                android:text="N1" />

            <Button
                android:id="@+id/buttonChooseLevel"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:onClick="buttonChooseLevelOnClick"
                android:text="@string/choose_level" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonIAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="25dp"
            android:onClick="buttonIAgreeOnClick"
            android:text="@string/i_agree" />

    </RelativeLayout>

</LinearLayout>