<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.hneu.languagetrainer.pages.vocabulary.WordIntroductionActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ruleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="～たり …～たり"
            android:textSize="@dimen/xlargeText" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="It makes a list of activities or attributes. It means something like &apos;this and that/sometimes this and sometimes that/in some parts this in other parts that&apos;. With nouns or -な adjectives it becomes &apos;～だったり …～だったりする&apos;."
            android:textSize="@dimen/buttonTextSize" />

        <ListView
            android:id="@+id/grammarExamplesListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonPrevious"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonPreviousOnClick"
            android:text="@string/previous"
            android:textSize="@dimen/buttonTextSize" />

        <Button
            android:id="@+id/buttonNext"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonNextOnClick"
            android:text="@string/next"
            android:textSize="@dimen/buttonTextSize" />

        <Button
            android:id="@+id/buttonSkip"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonSkipOnClick"
            android:text="@string/skipIntroduction"
            android:textSize="@dimen/buttonTextSize" />
    </LinearLayout>

</LinearLayout>